# apocharmm

./: .gitignore  CMakeLists.txt  README.md  run_all_tests.sh
capi/: CMakeLists.txt
capi/include/apocharmm_c/: CharmmContext.h  CharmmCrd.h  CharmmParameters.h  CharmmPsf.h  CudaIntegrator.h  CudaNoseHooverIntegrator.h  CudaNoseHooverThermostatIntegrator.h  DcdSubscriber.h  Error.h  Export.h  ForceManager.h  RestartSubscriber.h  Status.h  Subscriber.h
capi/private_include/apocharmm_c/detail/: CharmmContextHandle.h  CharmmCrdHandle.h  CharmmParametersHandle.h  CharmmPsfHandle.h  CudaIntegratorHandle.h  CudaNoseHooverIntegratorHandle.h  CudaNoseHooverThermostatIntegratorHandle.h  DcdSubscriberHandle.h  ErrorInternal.h  ForceManagerHandle.h  RestartSubscriberHandle.h  SubscriberHandle.h  Validation.h
capi/src/apocharmm_c/: CharmmContext.cpp  CharmmCrd.cpp  CharmmParameters.cpp  CharmmPsf.cpp  CudaIntegrator.cpp  CudaNoseHooverIntegrator.cpp  CudaNoseHooverThermostatIntegrator.cpp  DcdSubscriber.cpp  Error.cpp  ForceManager.cpp  RestartSubscriber.cpp  Subscriber.cpp
example/: nvt_nose_hoover.py  restart.py
include/: AtomSelection.h  AtomSelector.h  BEDSForceManager.h  BEDSSubscriber.h  Bonded_struct.h  Bspline.h  CharmmContext.h  CharmmCrd.h  CharmmPSF.h  CharmmParameters.h  CharmmResidueTopology.h  Checkpoint.h  CheckpointSubscriber.h  CompositeSubscriber.h  Constants.h  Constraints.h  Coordinates.h  CudaBlock.h  CudaBondedForce.h  CudaContainer.h  CudaDirectForce14_util.h  CudaDirectForceKernels.h  CudaDirectForceTypes.h  CudaDirectForce_util.h  CudaDomdecRecip.h  CudaEMap.h  CudaEnergyVirial.h  CudaHolonomicConstraint.h  CudaIntegrator.h  CudaLangevinPistonIntegrator.h  CudaLangevinThermostatIntegrator.h  CudaLeapFrogIntegrator.h  CudaMinimizer.h  CudaNeighborList.h  CudaNeighborListBuild.h  CudaNeighborListSort.h  CudaNeighborListStruct.h  CudaNoseHooverIntegrator.h  CudaNoseHooverThermostatIntegrator.h  CudaOldLangevinPistonIntegrator.h  (+80 more)
python/apocharmm/: __init__.py  _base.py  _lib.py  _types.py  charmm_context.py  charmm_crd.py  charmm_parameters.py  charmm_psf.py  cuda_integrator.py  cuda_nose_hoover_integrator.py  dcd_subscriber.py  error.py  errors.py  force_manager.py  restart_subscriber.py  subscriber.py
src/: AtomSelection.cpp  AtomSelector.cpp  AtomSelector.cu  BEDSForceManager.cu  BEDSSubscriber.cu  Bspline.cu  CMakeLists.txt  CharmmContext.cu  CharmmCrd.cu  CharmmPSF.cu  CharmmParameters.cu  CharmmResidueTopology.cu  Checkpoint.cu  CheckpointSubscriber.cu  CompositeSubscriber.cu  ConstantPressurePostDrift.cu  ConstantPressurePrepareDrift.cu  Constraints.cu  Coordinates.cu  CudaBlock.cu  CudaBondedForce.cu  CudaContainer.cu  CudaDirectForceKernels.cu  CudaEMap.cu  CudaEnergyVirial.cu  CudaHolonomicConstraint.cu  CudaIntegrator.cu  CudaLangevinPistonIntegrator.cu  CudaLangevinThermostatIntegrator.cu  CudaLeapFrogIntegrator.cu  CudaMinimizer.cu  CudaNeighborList.cu  CudaNeighborListBuild.cu  CudaNeighborListSort.cu  CudaNoseHooverIntegrator.cu  CudaNoseHooverThermostatIntegrator.cu  CudaOldLangevinPistonIntegrator.cu  CudaP21NeighborList.cu  CudaP21NeighborListBuild.cu  CudaPMEDirectForce.cu  (+64 more)
test/data/: 1lvz.cor  1lvz.psf
test/pytest/: charmm_psf.py  force_manager.py
test/unittests/: CMakeLists.txt  compare.h  unittest-ForceManagerGenerator.cpp  unittest-alchemical.cpp  unittest-argon10.cpp  unittest-argon1000.cpp  unittest-benchmarks.cpp  unittest-benzenePyrrole.cpp  unittest-bridgeEDS.cpp  unittest-charmmContext.cpp  unittest-charmmPSF.cpp  unittest-checkpoint.cpp  unittest-cudaContainer.cpp  unittest-deviceVector.cpp  unittest-direct.cpp  unittest-eds.cpp  unittest-emap.cpp  unittest-eneForces.cpp  unittest-fep.cpp  unittest-forceManager.cu  unittest-holonomic.cpp  unittest-insulin1.cpp  unittest-integrators.cpp  unittest-jac.cpp  unittest-langevinPiston.cpp  unittest-langevinThermostat.cpp  unittest-logger.cpp  unittest-main.cpp  unittest-minimize.cpp  unittest-mpid.cpp  unittest-noseHoover.cpp  unittest-p21.cpp  unittest-pme.cpp  unittest-psf.cpp  unittest-readCoordinates.cpp  unittest-readPRM.cpp  unittest-replicaExchange.cpp  unittest-restartSubscriber.cpp  unittest-restraintForce.cpp  unittest-subscribers.cpp  (+3 more)
